feat(question): implemented view feature in blog page

--- a/styles/app.css
+++ b/styles/app.css
@@ -414,6 +414,10 @@
   height: 200px;
   border-radius: 50%;
   z-index: -1;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
 }
 
 .bg-test {
